[package]
name = "tutorial-1"
version = "0.1.0"
edition = "2021"
description = "A simple calculator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wai-bindgen-rust = "0.2.3"

[package.metadata.wapm]
namespace = "enricopdg"
abi = "none"
bindings = { wai-version = "0.2.0", exports = "calculator.wai"}

[lib]
crate-type = ["cdylib", "rlib"]
